...
    @State private var profilePath = NavigationPath()

    var body: some View {
        TabView(selection: $selectedTab) {
            LibraryView()
                .tabItem {
                    Label("Library", systemImage: "books.vertical.fill")
                }
                .tag(0)

            ProfileView(path: $profilePath)
                .tabItem {
                    Label("Profile", systemImage: "person.crop.circle")
...
